<package>
  <name>kobuki_auto_docking</name>
  <version>0.7.6</version>
  <description>
	    Automatic docking for Kobuki:
	    Users owning a docking station for Kobuki can use this tool to let Kobuki find its nest autonomously.
  </description>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="yhju@yujinrobot.com">Younghun Ju</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_auto_docking</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS -->
  <build_depend>rclcpp</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_depend>kobuki_msgs</build_depend>
  <build_depend>kobuki_dock_drive</build_depend>

  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_linear_algebra</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>kdl_conversions</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>kobuki_dock_drive</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>

  <run_depend>ecl_threads</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_linear_algebra</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
